fix for blurb line breaks on smaller screens

--- a/src/styles/individual-page-styles.scss
+++ b/src/styles/individual-page-styles.scss
@@ -452,6 +452,7 @@ h1.tagline-low {
 		float: none;
 		padding-top: 8px;
 		line-height: 1.2;
+	    font-size: 24px;
 	}
 }
 
